Fix element leakage with overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,6 @@
 .testimonials-box {
   padding-top: var(--56px);
   text-align: center;
-  overflow: hidden;
 }
 .testimonials-box h2 {
   font-size: var(--16px);
@@ -481,7 +480,7 @@
   --fw-xl: 700;
   --fw-2xl: 800;
   --fw-3xl: 900;
-  --12px:0.75rem
+  --12px: 0.75rem;
   --14px: 0.875rem;
   --16px: 1rem;
   --18px: 1.125rem;
@@ -517,6 +516,7 @@
   --112px: 7rem;
   --128px: 8rem;
   --section-padding: 10rem;
+  overflow-x: hidden;
 }
 
 img,
