--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -11,7 +11,6 @@
 		padding-block: var(--68px);
 		padding-inline: var(--24px);
 		background-position: center;
-		
 
 		.card-heading {
 			font-size: var(--32px);
@@ -38,7 +37,6 @@
 			font-weight: var(--fw-l);
 			line-height: var(--26px);
 		}
-		
 	}
 
 	.bgi {
@@ -74,7 +72,6 @@
 .testimonials-box {
 	padding-top: var(--56px);
 	text-align: center;
-	overflow: hidden;
 
 	h2 {
 		font-size: var(--16px);
